k8s-3tier-observability-demo/k8s/istio/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: backend
  type: ClusterIP
