k8s-3tier-observability-demo/k8s/istio/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: frontend
  type: ClusterIP
