k8s-3tier-observability-demo/k8s/istio/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: default
spec:
  hosts:
  - "backend"
  http:
  - route:
    - destination:
        host: backend
        port:
          number: 8081
